ai-ml/gke-model-armor/configuring-the-gateway/llm-httproute.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START gke_aiml_gke_model_armor_llm_httproute]
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-httproute
  namespace: default
spec:
      parentRefs:
      -   name: llm-gateway
      rules:
      -   backendRefs:
        -   name: llm-service
          port: 8000
# [END gke_aiml_gke_model_armor_llm_httproute]
